--- a/src/app/theming/spacing.scss
+++ b/src/app/theming/spacing.scss
@@ -8,7 +8,8 @@
 	--spacing-ml: 20px;
 	--spacing-l: 24px;
 	--spacing-xl: 32px;
-	--spacing-xxl: 64px;
+	--spacing-xxl: 48px;
+	--spacing-xxxl: 64px;
 
 	--border-radius-s: 2px;
 	--border-radius: 4px;
